crates/karu/src/parser.rs
// SPDX-License-Identifier: MIT

//! Parser for Karu's Polar-inspired syntax.
//!
//! Parses token streams into an AST, which can then be compiled into
//! executable `Policy` structures.
//!
//! # Grammar (simplified)
//!
//! ```text
//! program     := rule*
//! rule        := effect IDENT ('if' expr)? ';'
//! effect      := 'allow' | 'deny'
//! expr        := or_expr
//! or_expr     := and_expr ('or' and_expr)*
//! and_expr    := unary_expr ('and' unary_expr)*
//! unary_expr  := 'not' unary_expr | primary_expr
//! primary_expr:= comparison | membership | forall | '(' expr ')'
//! comparison  := path op pattern
//! membership  := pattern 'in' path
//! forall      := 'forall' IDENT 'in' path ':' expr
//! exists      := 'exists' IDENT 'in' path ':' expr
//! path        := IDENT ('.' IDENT | '[' (NUMBER | IDENT) ']')*
//! pattern     := literal | IDENT | '_' | object_pattern | array_pattern
//! object_pattern := '{' (IDENT ':' pattern (',' IDENT ':' pattern)*)? '}'
//! array_pattern  := '[' (pattern (',' pattern)*)? ']'
//! op          := '==' | '!=' | '<' | '>' | '<=' | '>='
//! ```

use crate::ast::*;
use crate::lexer::{LexError, Lexer, Spanned, Token};
use crate::schema::*;
use serde_json::json;
use std::fmt;

/// Parser error with source position.
#[derive(Debug, Clone)]
pub struct ParseError {
    pub message: String,
    pub line: usize,
    pub column: usize,
    pub token: Option<Token>,
}

impl ParseError {
    /// Format the error with source context for display.
    pub fn format_with_source(&self, source: &str) -> String {
        let source_line = source
            .lines()
            .nth(self.line.saturating_sub(1))
            .unwrap_or("");
        let pointer = format!("{}^", " ".repeat(self.column.saturating_sub(1)));

        format!(
            "error: {}\n --> line {}:{}\n  |\n{} | {}\n  | {}",
            self.message, self.line, self.column, self.line, source_line, pointer
        )
    }
}

impl fmt::Display for ParseError {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "{}:{}: {}", self.line, self.column, self.message)
    }
}

impl std::error::Error for ParseError {}

impl From<LexError> for ParseError {
    fn from(e: LexError) -> Self {
        ParseError {
            message: e.message,
            line: e.line,
            column: e.column,
            token: None,
        }
    }
}
